# neurolens

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-kaggle.txt
.github/workflows/: ci.yml
configs/: active_run.yaml  base.yaml  resnet50_smoke_stage1.yaml  resnet50_smoke_stage2.yaml  resnet50_stage1.yaml  resnet50_stage2.yaml  smoke_micro_stage1.yaml  smoke_micro_stage2.yaml  smoke_small_stage1.yaml  smoke_small_stage2.yaml  vgg16_stage1.yaml  vgg16_stage2.yaml  xai_default.yaml  xai_smoke.yaml
docker/: postgres-compose.yml
docker/postgres-config/: pg_hba.conf  postgresql.conf
docker/postgres-init/: 01-create-user-and-schema.sql  02-apply-schema.sql
docs/public/: README.md
docs/public/assets/clinical/: CREDITS.md
docs/public/demo-examples/: examples.yaml
docs/public/demo-examples/precomputed/Te-gl_113/: result.json
docs/public/demo-examples/precomputed/Te-gl_277/: result.json
docs/public/demo-examples/precomputed/Te-me_101/: result.json
docs/public/demo-examples/precomputed/Te-me_169/: result.json
docs/public/demo-examples/precomputed/Te-no_1/: result.json
docs/public/demo-examples/precomputed/Te-pi_10/: result.json
docs/public/methodology/: clinical-context.md  dataset.md  explainability.md  metrics.md  model.md  training.md
docs/public/phases/: phase-1-vgg16-baseline.md  phase-2-architectures.md  phase-3-xai.md  phase-4-demo.md
hf-space/: README.md  app.py  requirements.txt
kernel/hello-world/: hello_world.py  kernel-metadata.json
kernel/runner/: kernel-metadata.json  run.py
kernel/smoke-test/: kernel-metadata.json  smoke_test.py
kernel/train-vgg16/: kernel-metadata.json  run.py
scripts/: deploy_hf_space.py  plot_confusion_matrices.py  plot_xai_case_grids.py  precompute_examples.py  run_demo.py  setup-postgres-ssl.sh
src/neurolens/: config.py
src/neurolens/data/: dataset.py  kaggle_paths.py  transforms.py
src/neurolens/db/: repository.py
src/neurolens/models/: factory.py  resnet50.py  vgg16.py
src/neurolens/tracking/: composite.py
src/neurolens/training/: cv.py  evaluator.py  run_train.py  run_vgg16.py  trainer.py
src/neurolens/ui/: gradio_app.py  inference.py  precompute.py  visualize.py
src/neurolens/xai/: gradcam.py  lime_explainer.py  metrics.py  run_batch.py  selection.py  shap_explainer.py
tests/: test_composite_logger.py  test_config.py  test_data_dataset.py  test_models_factory.py  test_models_resnet50.py  test_models_vgg16.py  test_smoke.py  test_training_cv.py  test_ui_app.py  test_ui_inference.py  test_ui_precompute.py  test_xai_gradcam.py  test_xai_lime.py  test_xai_metrics.py  test_xai_selection.py  test_xai_shap.py
