[project]
name = "neurolens"
version = "0.1.0"
description = "Brain tumor MRI classification with comparative XAI analysis (Grad-CAM + LIME + SHAP)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Johan Carlos Pereira Fernandes", email = "johancarlos62@gmail.com" }
]
keywords = [
    "deep-learning",
    "medical-imaging",
    "brain-tumor",
    "explainable-ai",
    "grad-cam",
    "lime",
    "shap",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Deep Learning
    "torch>=2.10,<2.11",
    "torchvision>=0.25,<0.26",
    # XAI
    "grad-cam>=1.5",
    "lime>=0.2.0.1",
    "shap>=0.51",
    # Demo
    "gradio>=5.0",
    # Tracking
    "wandb>=0.18",
    # Database
    "psycopg2-binary>=2.9",
    # Config & validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Data manipulation
    "scikit-learn>=1.5",
    "scikit-image>=0.24",
    "pandas>=2.2",
    "numpy>=2.0",
    "Pillow>=10.0",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Robustness
    "tenacity>=8.0",
    # Utilities
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/johancarloss/neurolens"
Repository = "https://github.com/johancarloss/neurolens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurolens"]

# ============================================================================
# uv — package manager configuration
# ============================================================================
# exclude-newer is a cooldown defense against supply chain attacks:
# packages published in the last 7 days are ignored at lock/install time.
# Reference: rule [PY-003] from user's knowledge base.
[tool.uv]
exclude-newer = "7 days"

# ============================================================================
# ruff — linter + formatter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
extend-exclude = [".venv", "kernel-output", "docs/private"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "ARG", # unused arguments
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (line-length already enforced)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ============================================================================
# pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring DATABASE_URL + WANDB_API_KEY env vars",
]

# ============================================================================
# mypy
# ============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "kernel-output/", "notebooks/"]
